<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Onboarding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeText1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                style="@style/TextViewStyle"
                 />

            <TextView
                android:id="@+id/sub_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subText1"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginVertical="20dp"
                style="@style/TextViewStyle"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
                android:src="@drawable/icon"
                android:layout_gravity="center"
                android:layout_marginVertical="40dp"/>

            <TextView
                android:id="@+id/feature_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/featureText1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginVertical="20dp"
                style="@style/TextViewStyle"
                />

            <TextView
                android:id="@+id/feature_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/featureDesc1"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                style="@style/TextViewStyle"
               />
        </LinearLayout>


</FrameLayout>
